# pico-rtic-example

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
