[package]
authors = ["Jamon Terrell <git@jamonterrell.com>"]
edition = "2018"
readme = "README.md"
name = "rtic-example"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.0.0"
cortex-m-semihosting = "0.3.3"
defmt = "0.3.0"
defmt-rtt = "0.3.1"
embedded-hal = { version = "0.2.5", features=["unproven"] }
embedded-time = "0.12.0"
panic-halt = "0.2.0"
rp-pico = "0.2.0"
rp2040-monotonic = "1.0.1"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "rtic-example"
test = false
bench = false


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# [profile.release]
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations
